--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "react-hook-form": "^7.50.1",
+    "react-router-dom": "^6.22.0"
   }
 }
