--- a/src/ClientApp/package.json
+++ b/src/ClientApp/package.json
@@ -3,17 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@algolia/autocomplete-js": "^1.17.0",
+    "@algolia/autocomplete-plugin-recent-searches": "^1.17.0",
+    "@algolia/autocomplete-theme-classic": "^1.17.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.14",
+    "algoliasearch": "^4.23.1",
     "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
+    "instantsearch.css": "^8.1.0",
     "jquery": "^3.6.4",
     "merge": "^2.1.1",
     "oidc-client": "^1.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-instantsearch": "^7.7.0",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.11.0",
     "react-scripts": "^5.0.1",
