--- a/src/iconcept.csproj
+++ b/src/iconcept.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="Algolia.Search" Version="6.17.0" />
+    <PackageReference Include="CsvHelper" Version="31.0.3" />
     <PackageReference Include="FluentValidation" Version="11.9.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="MediatR" Version="12.0.1" />
