--- a/src/ClientApp/package.json
+++ b/src/ClientApp/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.15.14",
     "algoliasearch": "^4.23.1",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.11.3",
     "http-proxy-middleware": "^2.0.6",
     "instantsearch.css": "^8.1.0",
     "jquery": "^3.6.4",
