--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -6,9 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*",
-
-"ConnectionStrings": {
-  "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:bachelor-db-server.database.windows.net,1433;Initial Catalog=bachelor-db;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication=Active Directory Default;"
-}
+"AllowedHosts": "*"
 }
