--- a/src/ClientApp/package.json
+++ b/src/ClientApp/package.json
@@ -10,6 +10,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.14",
     "algoliasearch": "^4.23.1",
+    "axios": "^1.6.8",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.11.3",
     "http-proxy-middleware": "^2.0.6",
