--- a/src/ClientApp/package.json
+++ b/src/ClientApp/package.json
@@ -8,6 +8,7 @@
     "@algolia/autocomplete-theme-classic": "^1.17.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.14",
     "algoliasearch": "^4.23.1",
